ajuste en las fechas de busqueda de ordenes

--- a/src/app/gestion-orden/gestion-orden.component.html
+++ b/src/app/gestion-orden/gestion-orden.component.html
@@ -285,11 +285,11 @@
               <div class="form-row">
                 <div class="form-group col-md-6 col-sm-1">
                   Fecha Inicial
-                  <input class="form-control" type="date"  id="fechaIni" #fechaIni>
+                  <input class="form-control" type="date" [value]="fechaI" id="fechaIni" #fechaIni>
                 </div>
                 <div class="form-group col-md-6 col-sm-1">
                   Fecha Final
-                  <input class="form-control" type="date" id="fechaFin" #fechaFin>
+                  <input class="form-control" type="date" value="2021-12-31" id="fechaFin" #fechaFin>
                 </div>
               </div>
               <div class="form-row">
