--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -190,6 +190,27 @@
               </div>
             </div>
           </div>
+          <div class="form-row">
+            <div class="form-group col-md-3">
+              <h6>Campos inventario fisico</h6>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="Activas">Activos</label>
+              <div id="Activas" class="btn-group-vertical">
+                <button type="button" class="btn btn-primary" *ngFor="let select of camposInventarioSelect"
+                  title="{{select.descripcion}}" (click)="aplicarCampoInventario(select)">{{select.nombre}}</button>
+              </div>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="Inactivas">Inactivos</label>
+              <div id="Inactivas" class="btn-group-vertical">
+                <button type="button" class="btn btn-primary" *ngFor="let unSelect of camposInventarioUnSelect"
+                  title="{{unSelect.descripcion}}" (click)="desaplicarCampoInventario(unSelect)">{{unSelect.nombre}}</button>
+              </div>
+            </div> 
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
