--- a/src/app/gestion-orden/gestion-orden.component.html
+++ b/src/app/gestion-orden/gestion-orden.component.html
@@ -35,11 +35,14 @@
             Imprimir
           </button>
         </div>
-        <div class="form-group col-md-4 col-sm-12 ">
+        <div class="form-group col-md-6 col-sm-12 ">
           <button type="button" class="btn btn-primary " id="Nueva" (click)="nuevaOrden()">Nueva Orden de
             trabajo</button>
           <button type="button" class="btn btn-primary ml-2" data-toggle="modal" data-target="#entregarModal">
-            Entregar Pedido
+            Cerrar orden
+          </button>
+          <button type="button" class="btn btn-primary ml-2" (click)="reabrir()" >
+            Reapertura de orden
           </button>
         </div>
       </div>
@@ -76,7 +79,7 @@
 
       <div class="form-row">
         <div class="form-group col-md-4 col-sm-2">
-          <input list="marcas" name="marca" #marca placeholder="Marca" class="form-control" id="marca"
+          <input list="marcas" name="marca" #marca placeholder="Marca" class="form-control" id="marca" [disabled]="documento.impreso==1"
             (change)="marcaSelect(marca)">
           <datalist id="marcas">
             <option *ngFor="let mar of marcaList" [value]="mar.nombre">
@@ -160,12 +163,12 @@
           <tr *ngFor="let ordenes of detallesList">
             <th scope="row">
               <button type="button" (click)="editarItem(ordenes)" class="btn btn-secondary btn-sm" data-toggle="modal"
-                data-target="#exampleModal">
+                data-target="#exampleModal" [disabled]="documento.impreso==1">
                 Editar
               </button>
               <!-- Button trigger modal -->
               <button type="button" (click)="eliminarItem(ordenes)" class="btn btn-secondary btn-sm" data-toggle="modal"
-                data-target="#eliminarModal">
+                data-target="#eliminarModal" [disabled]="documento.impreso==1">
                 Eliminar
               </button>
             </th>
@@ -351,7 +354,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Entregar Pedido</h5>
+              <h5 class="modal-title" id="exampleModalLabel">Cerrar orden</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
