--- a/src/app/components/gestion-orden/gestion-orden.component.html
+++ b/src/app/components/gestion-orden/gestion-orden.component.html
@@ -280,7 +280,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="cerrarCrearProducto()">Cancelar</button>
-        <button type="button" class="btn btn-primary"  (click)="crearProducto(crearProductoNombre,precioProductoNombre)">Crear</button>
+        <button type="button" class="btn btn-primary"  (click)="crearProducto()">Crear</button>
       </div>
     </div>
   </div>
